Playground/Yamls/Deployments/greetings_container-envs-from-configmaps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envs-from-configmaps
  namespace: playground
spec:
  replicas: 1
  selector:
    matchLabels:
      type: greeting
  template:
    metadata:
      labels:
        type: greeting
    spec:
      containers:
      - name: print-envs
        image: bash
        command: ["bash"]
        args:
        - -c
        - >-
            echo "$(GREETING), $(NAME)" &&
            sleep infinity
