Playground/Yamls/Deployments/nginx-with-config-imported-from-configmaps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: playground
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: playground
  labels:
    app: nginx
    type: web-servers
spec:
  replicas: 1
  selector:
    matchLabels:
      type: web-servers
  template:
    metadata:
      labels:
        type: web-servers
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: nginx.conf
            path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: playground
spec:
  ports:
  - name: http
    nodePort: 30202
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    type: web-servers
  type: NodePort
